--- a/typescript/package.json
+++ b/typescript/package.json
@@ -24,9 +24,11 @@
     "ton-compiler": "^2.2.0",
     "ton-contract-executor": "^0.6.2",
     "ton-core": "^0.47.0",
+    "ton-crypto": "^3.2.0",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/node": "^18.13.0",
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
     "typescript": "^4.9.5"
