--- a/typescript/package.json
+++ b/typescript/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha -r ts-node/register 'tests/**/*.ts'",
+    "test": "mocha --reporter mochawesome -r ts-node/register 'tests/**/*.ts'",
     "build": "./scripts/build.sh"
   },
   "repository": {
@@ -21,14 +21,13 @@
     "@ton-community/sandbox": "^0.2.2",
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.1",
+    "mochawesome": "^7.1.3",
     "ton-compiler": "^2.2.0",
     "ton-contract-executor": "^0.6.2",
     "ton-core": "^0.47.0",
-    "ton-crypto": "^3.2.0",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
-    "@types/node": "^18.13.0",
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
     "typescript": "^4.9.5"
